# sport_bot_v2

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  alembic.ini  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
etc/nginx/sites-available/: backend.conf
etc/supervisor/conf.d/: backend.conf
migrations/: env.py
migrations/versions/: 0171b7014395_program.py  177fa1165d48_program.py  210c21d4086d_project_settings.py  241645d27813_program.py  3197c205e6bd_program.py  3eed026c8440_add_is_schedule.py  400f3cad1bb2_category_lentgh.py  406b564d244f_program.py  4a520bb9d738_program.py  4ce66ee364e1_logger.py  5f9a51a9060b_program.py  722703a89529_program.py  8ec38cb9690f_program.py  97d0ce250f9d_update_category.py  a35118b7b377_program.py  c44c3a9631de_history_exercise.py  d62b37dfc917_logger.py  e6015c45ffff_program.py  ebae7a4770ac_program.py
scripts/: backup.py
src/: settings.py  wsgi.py
src/app/: main.py  utils.py
src/app/admin/: auth.py  models.py
src/app/statistics/: router.py  schemas.py
src/bot/: commands.py  main.py
src/bot/callback/: profile.py  program.py
src/bot/handlers/: profile.py  program.py
src/bot/keyboards/inline/: program.py
src/bot/keyboards/reply/: profile.py
src/bot/middlewares/: registration.py
src/database/: __init__.py  base.py  mixins.py
src/database/models/: history.py  logger.py  program.py  project_settings.py  token.py  user.py
src/db_logger/: db_log_handler.py
src/repositories/: history.py  program.py  project_settings.py  telegram_user.py  token.py  user.py
src/schemas/: import_data.py  program.py
src/services/: commands.py  hash.py  history.py  import_data.py  profile.py
src/utils/: repository.py  unitofwork.py  utils.py
