[tool.poetry]
name = "sport-bot-v2"
version = "0.1.0"
description = ""
authors = ["Olekseii Martseniuk <martsenyk.oleksii@ezcloudllc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.21"
asyncpg = "^0.28.0"
alembic = "^1.12.0"
python-dotenv = "^1.0.0"
pydantic = "2.3"
httpx = "^0.25.0"
aiofiles = "23.1.0"
aiogram = "^3.1.1"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
