[tool.poetry]
name = "sport-bot-v2"
version = "0.1.0"
description = ""
authors = ["Olekseii Martseniuk"]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.21"
asyncpg = "^0.28.0"
alembic = "^1.12.0"
python-dotenv = "^1.0.0"
pydantic = "2.3"
httpx = "^0.25.0"
aiofiles = "23.1.0"
aiogram = "^3.1.1"
click = "^8.1.7"
sqladmin = "^0.16.0"
uvicorn = "^0.24.0.post1"
itsdangerous = "^2.1.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
